--- a/index.html
+++ b/index.html
@@ -8,12 +8,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fascinate+Inline&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
+
+    <style>
+        .fascinate-inline-regular {
+            font-family: "Fascinate Inline", system-ui;
+            font-weight: 400;
+            font-style: normal;
+        }
+    </style>
 </head>
 
 <body class="m-0 bg-light">
     <header>
-        <h1 class="text-center text-decoration-underline mt-5">APLICACIÓN DE NOTAS</h1>
+        <h1 class="text-center display-3 mt-5 fascinate-inline-regular">APLICACIÓN DE NOTAS</h1>
     </header>
     <div id="notas" class="container my-5 w-100 rounded shadow-lg p-5">
         <div id="header-notas" class="d-flex justify-content-center">
