Cambio fuente  título de la página

--- a/index.html
+++ b/index.html
@@ -12,21 +12,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fascinate+Inline&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
-
-    <style>
-        .fascinate-inline-regular {
-            font-family: "Fascinate Inline", system-ui;
-            font-weight: 400;
-            font-style: normal;
-        }
-    </style>
 </head>
 
 <body class="m-0 bg-light">
     <header>
         <h1 class="text-center display-3 mt-5 fascinate-inline-regular">APLICACIÓN DE NOTAS</h1>
     </header>
-    <div id="notas" class="container my-5 w-100 rounded shadow-lg p-5">
+    <div id="notas" class="container my-5 w-100 rounded shadow-lg p-5 bg-white">
         <div id="header-notas" class="d-flex justify-content-center">
             <!-- Button trigger modal -->
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
