Adición iconos botones superiores

--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
             <!-- Button trigger modal -->
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                 Agregar nota
+                <i class="bi bi-file-earmark-plus-fill ms-3"></i>
             </button>
             <button id="btn-eliminar-todo" type="button" class="btn btn-danger btn-eliminar-todo d-none"
                 onclick="eliminarTodasLasNotas()">
                 Eliminar todas las notas
+                <i class="bi bi-trash3-fill ms-3"></i>
             </button>
         </div>
 
